--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Testando o Github</h1>
+    <p>O melhor site para criar repositórios dos seus projetos.</p>
     
 </body>
 </html>
